--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                     <a href="screenshots/qna-page.png" target="_blank"><img src="screenshots/qna-page.png" alt="landing-page" class="screenshots"/></a>
                     <a href="screenshots/feedback-page.png" target="_blank"><img src="screenshots/feedback-page.png" alt="feedback-page" class="screenshots"/></a>
                 </div>        
-                <a href="https://jck117.github.io/8.9-Assignment/" target="_blank"><span>Live Link</span></a>
-                <a href="https://github.com/jck117/8.9-Assignment" target="_blank">Repo</a>   
+                <a href="https://jck117.github.io/8.9-Assignment-quiz-app/" target="_blank"><span>Live Link</span></a>
+                <a href="https://github.com/jck117/8.9-Assignment-quiz-app" target="_blank">Repo</a>   
             </section>            
 
             <section id="contactMe">
