added api-hack capstone

--- a/index.html
+++ b/index.html
@@ -64,26 +64,52 @@
         
             <section id="myProjects">
                 <h2>&lt; My Projects ></h2>
-                <h3>Game of Thrones Quiz App</h3>
-                <p><span class="span-underlined">Description</span>: A quiz app that tests a person's knowledge of the popular TV series, Game of Thrones, 
-                with a series of questions. This app was built as part of an assignment at Thinkful. 
-                It is my very first web app.
-                </p>
-                <p class="center-tags"><span class="span-underlined">Technologies Used</span>:</p>
-                <div>
-                    <img src="logos/html5.png" alt="html5" />
-                    <img src="logos/css.png" alt="css" />
-                    <img src="logos/javascript.png" alt="javascript" />
-                    <img src="logos/jquery.png" alt="jquery" />
+                <!-- Quiz App -->
+                <div class="project-1 projects">
+                    <h3>Game of Thrones Quiz App</h3>
+                    <p><span class="span-underlined">Description</span>: A quiz app that tests a person's knowledge of the popular TV series, Game of Thrones, 
+                    with a series of questions. This app was built as part of an assignment at Thinkful. 
+                    It is my very first web app.
+                    </p>
+                    <p class="center-tags"><span class="span-underlined">Technologies Used</span>:</p>
+                    <div>
+                        <img src="logos/html5.png" alt="html5" />
+                        <img src="logos/css.png" alt="css" />
+                        <img src="logos/javascript.png" alt="javascript" />
+                        <img src="logos/jquery.png" alt="jquery" />
+                    </div>
+                    <div>
+                        <p class="center-tags"><span class="span-underlined">Screenshots</span>:</p>
+                        <a href="screenshots/project-1/landing-page.png" target="_blank"><img src="screenshots/project-1/landing-page.png" alt=" landing-page" id="screenshots-proj1" class="screenshots"/></a>
+                        <a href="screenshots/project-1/qna-page.png" target="_blank"><img src="screenshots/project-1/qna-page.png" alt=" landing-page" id="screenshots-proj1" class="screenshots"/></a>
+                        <a href="screenshots/project-1/feedback-page.png" target="_blank"><img src="screenshots/project-1/feedback-page.png" alt="feedback-page" id="screenshots-proj1" class="screenshots"/></a>
+                    </div>        
+                    <a href="https://jck117.github.io/8.9-Assignment-quiz-app/" target="_blank"><span>Live Link</span></a>
+                    <a href="https://github.com/jck117/8.9-Assignment-quiz-app" target="_blank">Repo</a>
                 </div>
-                <div>
-                    <p class="center-tags"><span class="span-underlined">Screenshots</span>:</p>
-                    <a href="screenshots/landing-page.png" target="_blank"><img src="screenshots/landing-page.png" alt="landing-page" class="screenshots"/></a>
-                    <a href="screenshots/qna-page.png" target="_blank"><img src="screenshots/qna-page.png" alt="landing-page" class="screenshots"/></a>
-                    <a href="screenshots/feedback-page.png" target="_blank"><img src="screenshots/feedback-page.png" alt="feedback-page" class="screenshots"/></a>
-                </div>        
-                <a href="https://jck117.github.io/8.9-Assignment-quiz-app/" target="_blank"><span>Live Link</span></a>
-                <a href="https://github.com/jck117/8.9-Assignment-quiz-app" target="_blank">Repo</a>   
+                
+                <!-- API Capstone -->
+                <div class="project-2 projects">
+                    <h3>Who, What, Where? App</h3>
+                    <p><span class="span-underlined">Description</span>: A simple app that allows a user to input a topic that one 
+                        is interested in at the moment in a search query, and get a list of random articles and videos related to that topic displayed
+                        which the user can interact with.
+                    </p>
+                    <p class="center-tags"><span class="span-underlined">Technologies Used</span>:</p>
+                    <div>
+                        <img src="logos/html5.png" alt="html5" />
+                        <img src="logos/css.png" alt="css" />
+                        <img src="logos/javascript.png" alt="javascript" />
+                        <img src="logos/jquery.png" alt="jquery" />
+                    </div>
+                    <div>
+                        <p class="center-tags"><span class="span-underlined">Screenshots</span>:</p>
+                        <a href="screenshots/project-2/landing-page.png" target="_blank"><img src="screenshots/project-2/landing-page.png" alt="landing-page" id="screenshots-proj2" class="screenshots"/></a>
+                        <a href="screenshots/project-2/results-page.png" target="_blank"><img src="screenshots/project-2/results-page.png" alt="results-page" id="screenshots-proj2" class="screenshots"/></a>
+                    </div>        
+                    <a href="https://jck117.github.io/whats-on-your-mind/" target="_blank"><span>Live Link</span></a>
+                    <a href="https://github.com/jck117/whats-on-your-mind" target="_blank">Repo</a>
+                </div>   
             </section>            
 
             <section id="contactMe">
