edited description for project 2

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <div class="project-2 projects">
                     <h3>Who, What, Where? App</h3>
                     <p><span class="span-underlined">Description</span>: A simple app that allows a user to input a topic that one 
-                        is interested in at the moment in a search query, and get a list of random articles and videos related to that topic displayed
+                        is interested in at the moment as a search query, and get a list of random articles and videos related to that topic displayed
                         which the user can interact with.
                     </p>
                     <p class="center-tags"><span class="span-underlined">Technologies Used</span>:</p>
