--- a/index.html
+++ b/index.html
@@ -109,12 +109,38 @@
                     </div>        
                     <a href="https://jck117.github.io/whats-on-your-mind/" target="_blank"><span>Live Link</span></a>
                     <a href="https://github.com/jck117/whats-on-your-mind" target="_blank">Repo</a>
-                </div>   
+                </div>
+                
+                <!-- FS Capstone #1 -->
+                <div class="project-3 projects">
+                    <h3>My Nom Nom Menu & Meal Planner</h3>
+                    <p><span class="span-underlined">Description</span>: An app that allows a user to create an account and login using their user credentials to create their own personal food menu and plan out what they want to eat today.
+                    </p>
+                    <p class="center-tags"><span class="span-underlined">Technologies Used</span>:</p>
+                    <div>
+                        <img src="logos/html5.png" alt="html5" />
+                        <img src="logos/css.png" alt="css" />
+                        <img src="logos/javascript.png" alt="javascript" />
+                        <img src="logos/react.png" alt="react" />
+                        <img src="logos/node.png" alt="node" />
+                        <img src="logos/psql.png" alt="psql" />
+
+                    </div>
+                    <div>
+                        <p class="center-tags"><span class="span-underlined">Screenshots</span>:</p>
+                        <a href="screenshots/project-3/landing-page.png" target="_blank"><img src="screenshots/project-3/landing-page.png" alt="landing-page" id="screenshots-proj3" class="screenshots"/></a>
+                        <a href="screenshots/project-3/menu-list-page.png" target="_blank"><img src="screenshots/project-3/menu-list-page.png" alt="menu-list-page" id="screenshots-proj3" class="screenshots"/></a>
+                        <a href="screenshots/project-3/meal-plan-page.png" target="_blank"><img src="screenshots/project-3/meal-plan-page.png" alt="meal-plan-page" id="screenshots-proj3" class="screenshots"/></a>
+                    </div>        
+                    <a href="https://nom-nom-app.now.sh/" target="_blank"><span>Live Link</span></a>
+                    <a href="https://github.com/jck117/nom-nom-app" target="_blank">Client Side Repo</a>
+                    <a href="https://github.com/jck117/my-nom-nom-api" target="_blank">Server Side Repo</a>
+                </div>      
             </section>            
 
             <section id="contactMe">
                     <h2> &lt; Contact Me ></h2>
-                    <a href="mailto:jckim81@yahoo.com" target="_blank">E-mail</a>
+                    <a href="mailto:jckim117@yahoo.com" target="_blank">E-mail</a>
                     <a href="https://www.linkedin.com/in/jae-kim-6b73a525" target="_blank">LinkedIn</a>
                     <a href="https://github.com/jck117" target="_blank">Git Hub</a>        
             </section>
