added express to technologies used

--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
                         <img src="logos/javascript.png" alt="javascript" />
                         <img src="logos/react.png" alt="react" />
                         <img src="logos/node.png" alt="node" />
+                        <img src="logos/express.jpg" alt="express" />
                         <img src="logos/psql.png" alt="psql" />
 
                     </div>
