updated descriptions of projects

--- a/index.html
+++ b/index.html
@@ -67,9 +67,10 @@
                 <!-- Quiz App -->
                 <div class="project-1 projects">
                     <h3>Game of Thrones Quiz App</h3>
-                    <p><span class="span-underlined">Description</span>: A quiz app that tests a person's knowledge of the popular TV series, Game of Thrones, 
-                    with a series of questions. This app was built as part of an assignment at Thinkful. 
-                    It is my very first web app.
+                    <p><span class="span-underlined">Description</span>: 
+                        A quiz app that tests the knowledge of fans of the popular TV series Game of Thrones. 
+                        This app was built to demonstrate the ability to design and implement a dynamic, 
+                        interactive quiz app from scratch using jQuery.
                     </p>
                     <p class="center-tags"><span class="span-underlined">Technologies Used</span>:</p>
                     <div>
@@ -91,9 +92,9 @@
                 <!-- API Capstone -->
                 <div class="project-2 projects">
                     <h3>Who, What, Where? App</h3>
-                    <p><span class="span-underlined">Description</span>: A simple app that allows a user to input a topic that one 
-                        is interested in at the moment as a search query, and get a list of random articles and videos related to that topic displayed
-                        which the user can interact with.
+                    <p><span class="span-underlined">Description</span>: An app that allows a user to search for articles and videos using a search feature.
+                        The purpose for creating this app was to demonstrate the ability to integrate a 3rd party API and do something interesting with
+                        the data from the API.
                     </p>
                     <p class="center-tags"><span class="span-underlined">Technologies Used</span>:</p>
                     <div>
@@ -114,7 +115,10 @@
                 <!-- FS Capstone #1 -->
                 <div class="project-3 projects">
                     <h3>My Nom Nom Menu & Meal Planner</h3>
-                    <p><span class="span-underlined">Description</span>: An app that allows a user to create an account and login using their user credentials to create their own personal food menu and plan out what they want to eat today.
+                    <p><span class="span-underlined">Description</span>:
+                        An app that allows people who love eating food and/or health-conscious to craft their own meal menu and make a meal plan for the day.
+                        This app was created to demonstrate knowledge of fullstack development and the ability to build both the client-side and API side to support
+                        an app that does something interesting, useful, and/or solves a problem.
                     </p>
                     <p class="center-tags"><span class="span-underlined">Technologies Used</span>:</p>
                     <div>
