updated index.css & index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <nav role="navigation">
+    <nav>
         <div class="top-bar">
             <a id="JK" href="#top">JK</a>    
             <div class="burgericon">
@@ -34,13 +34,13 @@
         </div>
     </nav>
     
-    <main role="main">
-            <header role="banner" id="top">
+    <main>
+            <header id="top">
                 <h1>&lt; Hi/ ></h1>
                 <img src="pictures/atlanta.png" alt="atlanta" />
                 <p>I'm Jae, an aspiring full-stack developer from Atlanta, GA. My interests include
-                    web app development, music, food, learning, and traveling. I am looking forward to
-                    see where all my hard work and passions will take me in the future.
+                    web app development, music, food, learning, and traveling. I am looking forward to seeing
+                    where all my hard work and passions will take me in the future.
                 </p>
 
             </header>
@@ -50,9 +50,9 @@
                 <p>I graduated from Georgia State University with a Bachelor's degree in Computer Science. I am currently enrolled in Thinkful's
                 Engineering Flex program to complement the knowledge I gained from my undergraduate studies with the technical skills
                 necessary to become more competent as a full-stack developer. After I complete my program, I hope I can work on a team 
-                with great programmers and contribute as valuable team member for the future company I work for.</p>
+                with great programmers and contribute as a valuable team member for my future employer.</p>
                 
-                <p>What attracted me to full-stack development is that it stimulates both my logical and creative side of my brain. The logical
+                <p>I was drawn to full-stack development because it stimulates both my logical and creative sides of my brain. The logical
                 side consisting of being able to break down a problem logically, and then coming up with an algorithm to solve the problem. And
                 the creative side of once creating a program, coming up with ways of how I can bring it to life, and make it look nice 
                 and user-friendly for the end-user.</p>
@@ -81,9 +81,9 @@
                     </div>
                     <div>
                         <p class="center-tags"><span class="span-underlined">Screenshots</span>:</p>
-                        <a href="screenshots/project-1/landing-page.png" target="_blank"><img src="screenshots/project-1/landing-page.png" alt=" landing-page" id="screenshots-proj1" class="screenshots"/></a>
-                        <a href="screenshots/project-1/qna-page.png" target="_blank"><img src="screenshots/project-1/qna-page.png" alt=" landing-page" id="screenshots-proj1" class="screenshots"/></a>
-                        <a href="screenshots/project-1/feedback-page.png" target="_blank"><img src="screenshots/project-1/feedback-page.png" alt="feedback-page" id="screenshots-proj1" class="screenshots"/></a>
+                        <a href="screenshots/project-1/landing-page.png" target="_blank"><img src="screenshots/project-1/landing-page.png" alt="landing-page" class="screenshots screenshots-proj1"/></a>
+                        <a href="screenshots/project-1/qna-page.png" target="_blank"><img src="screenshots/project-1/qna-page.png" alt="qna-page" class="screenshots screenshots-proj1"/></a>
+                        <a href="screenshots/project-1/feedback-page.png" target="_blank"><img src="screenshots/project-1/feedback-page.png" alt="feedback-page" class="screenshots screenshots-proj1"/></a>
                     </div>        
                     <a href="https://jck117.github.io/8.9-Assignment-quiz-app/" target="_blank"><span>Live Link</span></a>
                     <a href="https://github.com/jck117/8.9-Assignment-quiz-app" target="_blank">Repo</a>
@@ -93,7 +93,7 @@
                 <div class="project-2 projects">
                     <h3>Who, What, Where? App</h3>
                     <p><span class="span-underlined">Description</span>: An app that allows a user to search for articles and videos using a search feature.
-                        The purpose for creating this app was to demonstrate the ability to integrate a 3rd party API and do something interesting with
+                        The purpose of creating this app was to demonstrate the ability to integrate a 3rd party API and do something interesting with
                         the data from the API.
                     </p>
                     <p class="center-tags"><span class="span-underlined">Technologies Used</span>:</p>
@@ -105,8 +105,8 @@
                     </div>
                     <div>
                         <p class="center-tags"><span class="span-underlined">Screenshots</span>:</p>
-                        <a href="screenshots/project-2/landing-page.png" target="_blank"><img src="screenshots/project-2/landing-page.png" alt="landing-page" id="screenshots-proj2" class="screenshots"/></a>
-                        <a href="screenshots/project-2/results-page.png" target="_blank"><img src="screenshots/project-2/results-page.png" alt="results-page" id="screenshots-proj2" class="screenshots"/></a>
+                        <a href="screenshots/project-2/landing-page.png" target="_blank"><img src="screenshots/project-2/landing-page.png" alt="landing-page" class="screenshots screenshots-proj2"/></a>
+                        <a href="screenshots/project-2/results-page.png" target="_blank"><img src="screenshots/project-2/results-page.png" alt="results-page" class="screenshots screenshots-proj2"/></a>
                     </div>        
                     <a href="https://jck117.github.io/whats-on-your-mind/" target="_blank"><span>Live Link</span></a>
                     <a href="https://github.com/jck117/whats-on-your-mind" target="_blank">Repo</a>
@@ -117,8 +117,8 @@
                     <h3>My Nom Nom Menu & Meal Planner</h3>
                     <p><span class="span-underlined">Description</span>:
                         An app that allows people who love eating food and/or health-conscious to craft their own meal menu and make a meal plan for the day.
-                        This app was created to demonstrate knowledge of fullstack development and the ability to build both the client-side and API side to support
-                        an app that does something interesting, useful, and/or solves a problem.
+                        This app demonstrates one's knowledge of full-stack development and ability to build both the client-side and API side to support an app
+                        that does something interesting, useful, or solves a problem.
                     </p>
                     <p class="center-tags"><span class="span-underlined">Technologies Used</span>:</p>
                     <div>
@@ -133,9 +133,9 @@
                     </div>
                     <div>
                         <p class="center-tags"><span class="span-underlined">Screenshots</span>:</p>
-                        <a href="screenshots/project-3/landing-page.png" target="_blank"><img src="screenshots/project-3/landing-page.png" alt="landing-page" id="screenshots-proj3" class="screenshots"/></a>
-                        <a href="screenshots/project-3/menu-list-page.png" target="_blank"><img src="screenshots/project-3/menu-list-page.png" alt="menu-list-page" id="screenshots-proj3" class="screenshots"/></a>
-                        <a href="screenshots/project-3/meal-plan-page.png" target="_blank"><img src="screenshots/project-3/meal-plan-page.png" alt="meal-plan-page" id="screenshots-proj3" class="screenshots"/></a>
+                        <a href="screenshots/project-3/landing-page.png" target="_blank"><img src="screenshots/project-3/landing-page.png" alt="landing-page" class="screenshots screenshots-proj3"/></a>
+                        <a href="screenshots/project-3/menu-list-page.png" target="_blank"><img src="screenshots/project-3/menu-list-page.png" alt="menu-list-page" class="screenshots screenshots-proj3"/></a>
+                        <a href="screenshots/project-3/meal-plan-page.png" target="_blank"><img src="screenshots/project-3/meal-plan-page.png" alt="meal-plan-page" class="screenshots screenshots-proj3"/></a>
                     </div>        
                     <a href="https://nom-nom-app.now.sh/" target="_blank"><span>Live Link</span></a>
                     <a href="https://github.com/jck117/nom-nom-app" target="_blank">Client Side Repo</a>
